--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "start:dev": "nodemon index.js"
   },
   "keywords": [],
+  "type": "module",
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "commander": "^12.1.0",
+    "nanoid": "^5.0.7",
     "nodemon": "^3.1.4"
   }
 }
